# claire

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.save  README.md  nohup.out  pyproject.toml
conf/: parameters.yml
exp-01/: aniso_abilities.csv  blobs_abilities.csv  breast_cancer_abilities.csv  iris_abilities.csv  no_structure_abilities.csv  noisy_circles_abilities.csv  noisy_moons_abilities.csv  varied_abilities.csv  wine_abilities.csv
notebooks/: 01.01_pipeline_standard-Copy1.ipynb  01.01_pipeline_standard.ipynb  01.02_pipeline_standard_parallel.ipynb  01.02_pipeline_test.ipynb  01_generate_input_matrix.ipynb  01_pipeline_standard.ipynb  02.01_results_analysis_abi.ipynb  02.02_results_analysis_avg.ipynb  02_generate_correlations.ipynb  02_results_analysis.ipynb  03_generate_correlations.ipynb  03_generate_plots.ipynb  04_generate_plot_clusters.ipynb  04_generate_plots.ipynb  05_generate_plot_clusters.ipynb  06.01_item_analysis.ipynb  06.02_item_analysis_all.ipynb  06_item_analysis.ipynb  07_random_partitions_analysis.ipynb  08_partitions_labels.ipynb  08_valid_p_partition.ipynb  09_partitions_labels.ipynb  Untitled.ipynb  executables.py
outputs/: aniso.eps  aniso_avg.eps  aniso_behavior.eps  aniso_random_n0_difficulties.eps  aniso_random_n0_discrimination.eps  aniso_random_n10_difficulties.eps  aniso_random_n11_difficulties.eps  aniso_random_n12_difficulties.eps  aniso_random_n13_difficulties.eps  aniso_random_n14_difficulties.eps  aniso_random_n15_difficulties.eps  aniso_random_n16_difficulties.eps  aniso_random_n17_difficulties.eps  aniso_random_n18_difficulties.eps  aniso_random_n19_difficulties.eps  aniso_random_n1_difficulties.eps  aniso_random_n20_difficulties.eps  aniso_random_n21_difficulties.eps  aniso_random_n22_difficulties.eps  aniso_random_n23_difficulties.eps  aniso_random_n24_difficulties.eps  aniso_random_n25_difficulties.eps  aniso_random_n26_difficulties.eps  aniso_random_n27_difficulties.eps  aniso_random_n28_difficulties.eps  aniso_random_n29_difficulties.eps  (+798 more)
(+6921 files in other folders)
